fix overflow issue hiding select box

--- a/docs/main.css
+++ b/docs/main.css
@@ -5,7 +5,7 @@ body, div {
 body {
   margin-bottom: 20px;
 }
-body div {
+#controller {
   overflow-x: hidden;
 }
 hr {
